# stacktach-notigen

./: README.md  setup.cfg
notigen/: __init__.py  notigen.py
templates/: compute.instance.create.start_23.json  compute.instance.create.start_24.json  compute.instance.create.start_25.json  compute.instance.create.start_65.json  compute.instance.delete.start_7.json  compute.instance.delete.start_8.json  compute.instance.finish_resize.start_24.json  compute.instance.power_off.start_4.json  compute.instance.power_off.start_5.json  compute.instance.reboot.start_6.json  compute.instance.rebuild.start_14.json  compute.instance.rebuild.start_24.json  compute.instance.rescue.start_19.json  compute.instance.rescue.start_6.json  compute.instance.resize.confirm.start_12.json  compute.instance.resize.confirm.start_4.json  compute.instance.resize.prep.start_24.json  compute.instance.shutdown.start_65.json  compute.instance.snapshot.start_7.json  compute.instance.snapshot.start_8.json  compute.instance.snapshot.start_9.json  compute.instance.unrescue.start_6.json  eod_exists.json
