[metadata]
name = notigen
version = 0.2
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = OpenStack-like notification generator
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/StackTach/notigen
keywords =
    openstack
    notifications
    events
    generator
[files]
packages =
    notigen
